# rcinpy

./: README.md  hello.py  pyproject.toml
rcinpy/: __init__.py  core.py
